Fix: Adjust tab container to work with static nav on smaller screen sizes, closes #77

--- a/web/wp-content/themes/lf-theme/source/scss/blocks/_tab-container.scss
+++ b/web/wp-content/themes/lf-theme/source/scss/blocks/_tab-container.scss
@@ -19,7 +19,11 @@
 }
 
 .sticky-element {
-    @media (min-width:800px) {
+    @media (min-width: 515px) and (max-height: 615px) {
+        top: 0px;
+    }
+
+    @media (min-width:800px) and (min-height: 616px) {
         position: sticky;
         top: 125px;
 
